--- a/hoppyStyle.css
+++ b/hoppyStyle.css
@@ -46,7 +46,12 @@ canvas {
     position: absolute;
     border: 5px var(--cream);
     border-style: double none;
-    user-select: none;
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 
 #game-over-div {
