--- a/hoppyStyle.css
+++ b/hoppyStyle.css
@@ -9,12 +9,12 @@
 html {
     background-color: var(--medium-purple);
     cursor: default;
-    /* -webkit-touch-callout:none;
+    -webkit-touch-callout:none;
     -webkit-user-select:none;
     -khtml-user-select:none;
     -moz-user-select:none;
     -ms-user-select:none;
-    user-select:none; */
+    user-select:none;
 }
 
 body {
